--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,3 +1,12 @@
+- name: Commit & push
+  run: |
+    mkdir -p dist
+    git config user.name github-actions[bot]
+    git config user.email 41898282+github-actions[bot]@users.noreply.github.com
+    git add dist/snake.svg
+    git commit -m "update snake animation" || echo "No changes"
+    git push
+
 name: Generate contribution-snake
 
 on:
