--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -28,4 +28,4 @@ jobs:
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
           git add dist/snake.svg
           git commit -m "update snake animation" || echo "No changes"
-          git push
+          git push origin HEAD
