--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,8 +2,8 @@ name: Generate contribution-snake
 
 on:
   schedule:
-    - cron: "0 2 * * *"   # runs every day at 2am UTC
-  workflow_dispatch:       # allow manual trigger
+    - cron: "0 2 * * *"
+  workflow_dispatch:
 
 jobs:
   build:
